# mofetch

./: CHANGELOG.md  Cargo.toml  README.md  performance_notes.md
src/: core.rs  fetch.rs  help_options.rs  info.rs  main.rs  utils.rs
src/fetch/: config_manager.rs  mod.rs
src/shaders/: dog_shader.rs  downscale_shader.rs  sobel_shader.rs
src/shaders/shader_code/: dog_shader.wgsl  downscale_shader_large.wgsl  downscale_shader_largest.wgsl  downscale_shader_medium.wgsl  downscale_shader_small.wgsl  sobel_shader.wgsl
